--- a/PAPER_EXPERT_FINAL.ipynb
+++ b/PAPER_EXPERT_FINAL.ipynb
@@ -54,16 +54,16 @@
       "metadata": {
         "id": "R8-3sG_a0JjV",
         "colab_type": "code",
+        "outputId": "31d66e2f-ca1e-4aa5-d94a-b94c5d4e2a86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 666
-        },
-        "outputId": "31d66e2f-ca1e-4aa5-d94a-b94c5d4e2a86"
+        }
       },
       "source": [
         "!pip install -U Skater"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,11 +125,11 @@
       "metadata": {
         "id": "9jr0Zc0GqBqq",
         "colab_type": "code",
+        "outputId": "96cb134c-6e3e-453b-9c7e-623c87ad59cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
-        },
-        "outputId": "96cb134c-6e3e-453b-9c7e-623c87ad59cb"
+        }
       },
       "source": [
         "#import packages\n",
@@ -197,7 +197,7 @@
         "#show graphs in notebook\n",
         "%matplotlib inline"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "dados = dados_tunning.copy()\n",
         "dados.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +370,7 @@
         "\n",
         "dados.head(2)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +600,7 @@
         "\n",
         "Xtrain, Xtest, ytrain, ytest = train_test_split(X, y, random_state=42, stratify = y)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +636,7 @@
         "ytest.plot.hist()\n",
         "print(len(ytest))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -952,7 +952,7 @@
         "results = pd.DataFrame({'name' : [], 'precision' : [], 'recall' : [], 'f1' : [], 'auc' : [], 'g-mean' : []})\n",
         "results = evaluating_models(models_sem, Xtest, ytest, results)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1209,11 +1209,11 @@
       "metadata": {
         "id": "F4MaC7AhxYjy",
         "colab_type": "code",
+        "outputId": "64fc2d1c-d33f-40c8-bb1d-b694b2cc0e46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "64fc2d1c-d33f-40c8-bb1d-b694b2cc0e46"
+        }
       },
       "source": [
         "#sorted_SF\n",
@@ -1224,7 +1224,7 @@
         "results = evaluating_models(models_SF, Xtest, ytest, results)\n",
         "results"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1594,17 +1594,17 @@
       "metadata": {
         "id": "FpLGqxg6Kw9i",
         "colab_type": "code",
+        "outputId": "3cd2a42e-4e23-4d61-9c03-1308f0ad4621",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "3cd2a42e-4e23-4d61-9c03-1308f0ad4621"
+        }
       },
       "source": [
         "results2 = pd.DataFrame({'name' : [], 'precision' : [], 'recall' : [], 'f1' : [], 'auc' : [], 'g-mean' : []})\n",
         "results2 = evaluating_models(models_under, Xtest, ytest, results2)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1769,17 +1769,17 @@
       "metadata": {
         "id": "5K2oyYyOMIxB",
         "colab_type": "code",
+        "outputId": "7e76b143-21c2-4401-8e2f-9b8807940e10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "7e76b143-21c2-4401-8e2f-9b8807940e10"
+        }
       },
       "source": [
         "results2 = pd.DataFrame({'name' : [], 'precision' : [], 'recall' : [], 'f1' : [], 'auc' : [], 'g-mean' : []})\n",
         "results2 = evaluating_models(models_smote, Xtest, ytest, results2)"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1929,7 +1929,7 @@
         "\n",
         "results"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2184,16 +2184,16 @@
       "metadata": {
         "id": "qCdrqbL070WT",
         "colab_type": "code",
+        "outputId": "6e4f1fd5-85d4-4223-ae5c-dfaaf8b03a3a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 408
-        },
-        "outputId": "6e4f1fd5-85d4-4223-ae5c-dfaaf8b03a3a"
+        }
       },
       "source": [
         "print(results[['name', 'precision', 'recall', 'auc', 'g-mean']].to_latex())"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2253,7 +2253,7 @@
         "print(1-un/sm)\n",
         "\n"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2296,7 +2296,7 @@
         "display(SVG(graph.pipe(format='svg')))\n",
         "\n"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2332,7 +2332,7 @@
         "display(SVG(graph.pipe(format='svg')))\n",
         "\n"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2384,7 +2384,7 @@
         "plt.xlim([-1, Xtest[m.best_attr].shape[1]])\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2443,7 +2443,7 @@
         "    interpreter.feature_importance.plot_feature_importance(pyint_model, ascending=True, ax=ax)\n",
         "    ax.set_title(model.name)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2533,7 +2533,7 @@
       "source": [
         "sorted_under"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2723,11 +2723,11 @@
       "metadata": {
         "id": "Agd_M2anbZ4k",
         "colab_type": "code",
+        "outputId": "f8715bde-cf68-486c-8478-9a12f318fb31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "f8715bde-cf68-486c-8478-9a12f318fb31"
+        }
       },
       "source": [
         "\"\"\"\n",
@@ -2755,7 +2755,7 @@
         "plt.show()\n",
         "\"\"\""
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2776,11 +2776,11 @@
       "metadata": {
         "id": "BKLYvMJtSJWD",
         "colab_type": "code",
+        "outputId": "3508eb2d-c27b-4f99-ea87-16ef2d52ccd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "3508eb2d-c27b-4f99-ea87-16ef2d52ccd5"
+        }
       },
       "source": [
         "\"\"\"\n",
@@ -2814,7 +2814,7 @@
         "plt.bar(range(Xtest.iloc[:, my_list].shape[1]), arr_cum, color=\"r\", align=\"center\")\n",
         "\"\"\""
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2845,11 +2845,11 @@
       "metadata": {
         "id": "Is5CaLE4UfqG",
         "colab_type": "code",
+        "outputId": "9e0b7ba6-cec2-4edf-f00e-4e618cba3a2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "9e0b7ba6-cec2-4edf-f00e-4e618cba3a2f"
+        }
       },
       "source": [
         "\"\"\"\n",
@@ -2899,7 +2899,7 @@
         "plot_alg_comp(results, names)\n",
         "\"\"\""
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2914,6 +2914,212 @@
           "execution_count": 23
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gU90d9XhXHu-",
+        "colab_type": "code",
+        "outputId": "3755715c-2de6-40f6-8d14-6d5f98b12628",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
+      },
+      "source": [
+        "#erro min exp 01\n",
+        "print(1-(45+33+35+45)/(4*87))\n",
+        "\n",
+        "#erro min exp 02\n",
+        "print(1-(46+32+43+48)/(4*87))\n",
+        "\n",
+        "#erro min exp 03\n",
+        "print(1-(78+79+76+72)/(4*87))\n",
+        "\n",
+        "#erro min exp 04\n",
+        "print(1-(43+74+36+51)/(4*87))\n"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.5459770114942528\n",
+            "0.514367816091954\n",
+            "0.12356321839080464\n",
+            "0.4137931034482759\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FNbb5rXYdMHV",
+        "colab_type": "code",
+        "outputId": "a7aadcaa-1276-4dca-ed4f-5b1d509922bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "#erro min exp 01\n",
+        "print((20+13+12+134)/(4*1843))\n",
+        "\n",
+        "#erro min exp 02\n",
+        "#print(1-(46+32+43+48)/(4*87))\n",
+        "\n",
+        "#erro min exp 03\n",
+        "print((250+234+232+433)/(4*1843))\n",
+        "\n",
+        "#erro min exp 04\n",
+        "#print(1-(43+74+36+51)/(4*87))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.024281063483450896\n",
+            "0.15586001085187196\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "w4oz2vLzXRch",
+        "colab_type": "code",
+        "outputId": "ac039aa8-a88c-497f-d531-afd25123dbb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
+      },
+      "source": [
+        "#erro auc exp 01\n",
+        "print(results[\"auc\"][0:4].mean())\n",
+        "\n",
+        "#erro auc exp 02\n",
+        "print(results[\"auc\"][4:8].mean())\n",
+        "\n",
+        "#erro auc exp 03\n",
+        "print(results[\"auc\"][8:12].mean())\n",
+        "\n",
+        "#erro auc exp 04\n",
+        "print(results[\"auc\"][12:16].mean())"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.8592959692156092\n",
+            "0.8497335366500146\n",
+            "0.9102615675341929\n",
+            "0.8479911563480333\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xt2iwqE4Yr_0",
+        "colab_type": "code",
+        "outputId": "90f0e159-8af0-40ff-8da5-11e895cb435a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
+      },
+      "source": [
+        "#erro auc exp 01\n",
+        "print(results[\"g-mean\"][0:4].mean())\n",
+        "\n",
+        "#erro auc exp 02\n",
+        "print(results[\"g-mean\"][4:8].mean())\n",
+        "\n",
+        "#erro auc exp 03\n",
+        "print(results[\"g-mean\"][8:12].mean())\n",
+        "\n",
+        "#erro auc exp 04\n",
+        "print(results[\"g-mean\"][12:16].mean())"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.6634364999040518\n",
+            "0.6848429464446311\n",
+            "0.8600550525616475\n",
+            "0.7328143225060915\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M7y51ufyedY9",
+        "colab_type": "code",
+        "outputId": "7026d507-7006-4169-d7a3-a95ab15e97e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "#erro auc exp 01\n",
+        "print(results[\"recall\"][0:4].mean())\n",
+        "\n",
+        "#erro auc exp 03\n",
+        "print(results[\"recall\"][8:12].mean())"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.9757189365165491\n",
+            "0.844139989148128\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bzhaqY_gZsaM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fn2duW5lmcWo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
